work in progress - check for cookie, send and receive messages from certain user and role rooms.  Filter based on roles

--- a/nodes/ui_tab.html
+++ b/nodes/ui_tab.html
@@ -4,6 +4,7 @@
         defaults: {
             name: {value: 'Home'},
             icon: {value: 'dashboard'},
+            role: {value: ''},
             order: {value: 0}
         },
         paletteLabel: 'dashboard tab',
@@ -22,6 +23,10 @@
     <div class="form-row">
         <label for="node-config-input-icon"><i class="fa fa-file-image-o"></i> Icon</label>
         <input type="text" id="node-config-input-icon">
+    </div>
+    <div class="form-row">
+        <label for="node-config-input-role"><i class="fa fa-user"></i> Role</label>
+        <input type="text" id="node-config-input-role">
     </div>
 </script>
 
